fix(io): Recommend code name for Week Work Order, fix notification when completed Job Card, add mobile button for Shift Handover

--- a/tahp/public/css/job_card.css
+++ b/tahp/public/css/job_card.css
@@ -112,6 +112,7 @@
 .jc-tb-secondary {
     font-size: 0.75rem;
     line-height: 0.75rem;
+    margin-block: 5px;
 }
 
 .jc-tb-mobile-row {
